<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/Contenedor"
    android:background="@mipmap/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/body"
        android:layout_above="@+id/bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Bienvenido"
            android:id="@+id/textView"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/size_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Presentación"
            android:id="@+id/Presentación"
            android:textIsSelectable="false"
            android:gravity="center"
            android:textSize="@dimen/size_content"
            android:layout_above="@+id/ingresar"
            android:layout_below="@+id/Logo"
            android:layout_alignStart="@+id/ingresar"
            android:layout_alignEnd="@+id/ingresar" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/Logo"
            android:src="@mipmap/logo"
            android:scaleType="fitXY"
            android:contentDescription="Logo"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:id="@+id/ingresar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="22dp"
            android:textSize="@dimen/size_title"
            android:longClickable="true"
            android:textColor="#FFFFFF"
            android:nestedScrollingEnabled="true"
            android:onClick="setListFooter"
            style="@drawable/btn_border_radius"
            android:background="@drawable/btn_border_radius" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/bottom"
        android:layout_margin="0dp"
        style="@style/Encabezado"></RelativeLayout>

</RelativeLayout>
