<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tdc.trabajandodesdecasa.belleza"
    style="@style/Madres">

    <RelativeLayout
        style="@style/Encabezado"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/relativeLayout8"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout7"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="185dp" />

        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:background="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/peluqueria"
        android:layout_marginTop="40dp"
        android:background="@mipmap/peluqueria"
        android:layout_marginRight="10dp"
        android:layout_marginStart="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/manicura"
        android:background="@mipmap/manicura"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@+id/peluqueria"
        android:layout_toEndOf="@+id/peluqueria"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/tintura"
        android:background="@mipmap/tinturado"
        android:layout_alignTop="@+id/manicura"
        android:layout_toEndOf="@+id/manicura"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/facial"
        android:background="@mipmap/facial"
        android:layout_marginRight="0dp"
        android:layout_below="@+id/manicura"
        android:layout_alignStart="@+id/manicura"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Peluqueria"
        android:id="@+id/Peluqueria"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/Manicura"
        android:layout_alignBottom="@+id/Manicura"
        android:layout_alignStart="@+id/peluqueria"
        android:layout_alignEnd="@+id/peluqueria" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Manicura"
        android:id="@+id/Manicura"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_below="@+id/peluqueria"
        android:layout_alignStart="@+id/manicura"
        android:layout_alignEnd="@+id/manicura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tintura"
        android:id="@+id/Tintura"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_alignTop="@+id/Manicura"
        android:layout_alignStart="@+id/tintura"
        android:layout_alignEnd="@+id/tintura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Facial"
        android:id="@+id/Facial"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_below="@+id/facial"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
